# visualCaseGen

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  GUI.ipynb  LICENSE.md  README.md  basics.html  checker.py  cli.py  compset.html  creating_case.html  environment.yml  faulty_config_detector.py  fillindian.html  genindex.html  grid.html  index.html  installation.html  job-fault-search.sh  launch.html  objects.inv  open.html  paper.bib  paper.md  pyproject.toml  ridge.html  search.html  searchindex.js  setup.cfg  setup.py  static_check.py  tests.py  troubleshooting.html  unittests.py
.doctrees/: basics.doctree  compset.doctree  creating_case.doctree  environment.pickle  fillindian.doctree  grid.doctree  index.doctree  installation.doctree  launch.doctree  open.doctree  ridge.doctree  troubleshooting.doctree
.github/workflows/: ci-tests.yml  python-app.yml  sphinx.yml
ProConPy/: README.md  config_var.py  config_var_bool.py  config_var_int.py  config_var_real.py  config_var_str.py  config_var_str_ms.py  csp_solver.py  csp_utils.py  dev_utils.py  dialog.py  dummy_widget.py  hgraph_utils.py  options_spec.py  out_handler.py  stage.py  stage_rank.py  stage_stat.py
_sources/: compset.rst.txt  creating_case.rst.txt  fillindian.rst.txt  grid.rst.txt  index.rst.txt  installation.rst.txt  ridge.rst.txt  troubleshooting.rst.txt
docs/: basics.rst  compset.rst  conf.py  fillindian.rst  grid.rst  index.rst  installation.rst  launch.rst  open.rst  ridge.rst  troubleshooting.rst
internal/: README.md
mom6_bathy_notebooks/: README.md
mom6_forge_notebooks/: README.md
paper/: paper.bib  paper.md
specs/: gen_options_specs.py  options_dependencies.py  options_specs.py  relational_assertions.py
tests/: README.md  conftest.py  utils.py
tests/1_unit/: test_config_var_int.py  test_config_var_real.py  test_config_var_str.py  test_cores_case_creator.py  test_fsurdat_customization_specifier.py  test_fsurdat_matrix.py  test_stage_relevance.py
tests/2_integration/: test_constraint_violation.py  test_custom_clm_grid.py  test_custom_compset.py  test_custom_grid_to_standard.py  test_relational_constraints.py  test_standard_compset.py  test_ww3_coupling.py
tests/2_system/: test_custom_clm_grid.py  test_custom_compset.py  test_custom_grid_to_standard.py  test_main.py  test_mom6_bathy_launcher.py  test_relational_constraints.py  test_standard_compset.py
tests/3_static/: test_satisfiability.py
tests/3_system/: test_custom_compset_std_grid.py  test_custom_mom6_grid.py  test_f2000_custom_grid.py  test_fhist_custom_grid.py  test_rof_ocn_map.py
tests/4_static/: test_relational_constraints.py  test_stage_hierarchy.py
tests/integration/: test_custom_compset.py  test_custom_grid_to_standard.py  test_main.py
tests/temp/: README.md
tests/unit/: test_multi_checkbox.py
tools/: cgraph_plotter.py  faulty_config_detector.py  find_combined_reasons.py  pattern_finder.py  stage_pipeline_plotter.py  stage_tree_plotter.py
visualCIME/: CIME_interface.py  CompliancesHandler.py  CompliancesVC.py  ConfigVar.py  DummyWidget.py  GUI.py  GUI_create_advanced.py  GUI_create_novice.py  GUI_preliminaries.py  OutHandler.py  OutputVC.py
visualCaseGen/: CIME_interface.py  CheckboxMulti.py  ConfigVar.py  ConfigVarOpt.py  ConfigVarOptMS.py  CreateCaseWidget.py  DummyWidget.py  GUI.py  GUI_create_advanced.py  GUI_create_custom.py  GUI_create_novice.py  GUI_create_predefined.py  __init__.py  checkbox_multi_widget.py  cime_interface.py  cli.py  config_var.py  config_var_base.py  config_var_bool.py  config_var_compset.py  config_var_int.py  config_var_opt.py  config_var_opt_ms.py  config_var_real.py  config_var_str.py  config_var_str_ms.py  create_case_widget.py  custom_atm_grid_widget.py  custom_grid_widget.py  custom_lnd_grid_widget.py  custom_ocn_grid.py  custom_ocn_grid_widget.py  dev_utils.py  dialog.py  dummy_widget.py  gui.py  gui_case_configurator.py  gui_compset_section.py  gui_create_custom.py  gui_create_predefined.py  (+20 more)
visualCaseGen/config_vars/: compset_vars.py  custom_compset_vars.py  grid_vars.py  launcher_vars.py  standard_compset_vars.py
visualCaseGen/custom_widget_types/: case_creator.py  case_creator_widget.py  case_tools.py  checkbox_multi_widget.py  clm_modifier_launcher.py  disabled_text.py  dummy_output.py  fsurdat_area_specifier.py  fsurdat_matrix.py  mom6_bathy_launcher.py  mom6_forge_launcher.py  multi_checkbox.py  runoff_mapping_generator.py  stage_widget.py  ww3_input_generator.py
visualCaseGen/specs/: compset_options.py  grid_options.py  launcher_options.py  options.py  relational_constraints.py
visualCaseGen/stages/: compset_stages.py  grid_stages.py  launcher_stages.py
visualCaseGen/utils/: create_case.py
visualCaseGen/widgets/: compset_widgets.py  grid_widgets.py  initialize_compset_widgets.py  launcher_widgets.py
