[project]
name = "visualCaseGen"
version = "0.1.1"
authors = [
  { name = "Alper Altuntas, NCAR", email = "altuntas@ucar.edu" }
]
description = "A GUI to guide CESM users when creating a new case."
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: LGPL",
  "Programming Language :: Python",
  "Framework :: Jupyter"
]
requires-python = ">=3.12.7,<3.13.0"
dependencies = [
  "ipykernel>=6.29,<6.30",
  "ipython>=8.2,<8.3",
  "jupyterlab>=4.0,<4.1",
  "jupyterlab_server>=2.25,<2.26",
  "ipywidgets>=8.1.1,<8.2",
  "PyYAML>=6.0,<6.1",
  "z3-solver>=4.12.3,<4.13",
  "networkx>=3.3,<3.4",
  "netcdf4>=1.6,<1.7",
  "xarray>=2023.12,<2024",
  "black>=24.1,<24.2",
  "pytest>=8.0,<8.1",
  "hypothesis>=6.125.1,<6.126"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ProConPy", "visualCaseGen"]