[project]
name = "visualCaseGen"
version = "0.1.1"
authors = [
  { name = "Alper Altuntas, NCAR", email = "altuntas@ucar.edu" }
]
description = "A GUI to guide CESM users when creating a new case."
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: LGPL",
  "Programming Language :: Python",
  "Framework :: Jupyter"
]
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=6.29",
  "ipython>=8.2",
  "jupyterlab>=4.0",
  "jupyterlab_server>=2.25",
  "ipywidgets>=8.1.1",
  "PyYAML>=6.0",
  "z3-solver>=4.12.3",
  "networkx>=3.3",
  "netcdf4>=1.6",
  "xarray>=2023.12",
  "black>=24.1",
  "pytest>=8.0",
  "hypothesis>=6.125.1"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ProConPy", "visualCaseGen"]