[project]
name = "visualCaseGen"
version = "0.1.3"
authors = [
  { name = "Alper Altuntas, NCAR", email = "altuntas@ucar.edu" }
]
description = "A GUI to guide CESM users when creating a new case."
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache 2.0 License",
  "Programming Language :: Python",
  "Framework :: Jupyter"
]
requires-python = ">=3.11.10,<3.13.0"
dependencies = [
  "ipykernel>=6.29,<7.3.0",
  "ipython>=8.2",<9.13,
  "jupyterlab>=4.0,<4.6.0",
  "jupyterlab_server>=2.25,<2.29.0",
  "ipywidgets>=8.1.1,<8.2.0",
  "PyYAML>=6.0,<6.1.0",
  "z3-solver>=4.12.3,<4.17.0",
  "networkx>=3.3,<3.7.0",
  "netcdf4>=1.6,<1.8.0",
  "xarray>=2023.12,<2026.3.0",
  "black>=24.1,<26.4.0",
  "pytest>=8.0,<9.1.0",
  "hypothesis>=6.125.1,<6.152.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ProConPy", "visualCaseGen"]
