[metadata]
name = visualCaseGen
version = 0.0.1
author = Alper Altuntas, NCAR
author_email = altuntas@ucar.edu
license_file = LICENSE.md
description = A GUI to guide CESM users when creating a new case.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESMCI/visualCaseGen
keywords = CESM, simple, models, ipython, widgets
platforms = Linux, Mac OS X
license = LGPL
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: LGPL
  Programming Language :: Python
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3 :: Only
  Framework :: Jupyter

[options]
python_requires = >=3.9

zip_safe = False
packages = find:

install_requires =
  ipykernel>=4.5.1
  ipython>=6.1.0
  jupyterlab>3.2.0
  jupyterlab_server
  ipywidgets>=7.7.2,<8.0
  PyYAML>=5.4
  z3-solver>=4.8.15,<4.12
  networkx>=2.8
  matplotlib>3.5
  netcdf4>=1.6
  xarray>=0.20
