[metadata]
name = visualCaseGen
version = 0.0.1
author = Alper Altuntas, NCAR
author_email = altuntas@ucar.edu
license_file = LICENSE.md
description = A GUI to guide CESM users when creating a new case.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESMCI/visualCaseGen
keywords = CESM, simple, models, ipython, widgets
platforms = Linux, Mac OS X
license = LGPL
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: LGPL
  Programming Language :: Python
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3 :: Only
  Framework :: Jupyter

[options]
python_requires = >=3.10

zip_safe = False
packages = find:

install_requires =
  ipykernel>=6.29,<6.30
  ipython>=8.2,<8.3
  jupyterlab>=4.0,<4.1
  jupyterlab_server>=2.25,<2.26
  ipywidgets>=8.1.1,<8.2
  PyYAML>=6.0,<6.1
  z3-solver>=4.12,<4.13
  networkx>=3.2,<3.3
  matplotlib>3.6,<3.7,
  netcdf4>=1.6,<1.7
  xarray>=2023.12,<2024
